--- a/sieg-gestao-escolar-frontend/sieg-gestao-escolar-frontend/src/components/Navbar.css
+++ b/sieg-gestao-escolar-frontend/sieg-gestao-escolar-frontend/src/components/Navbar.css
@@ -4,7 +4,7 @@
   top: 0;
   left: 0;
   height: 100vh;
-  width: 300px; /* Aumentei a largura */
+  width: 300px;
   background-color: #152259;
   padding: 20px;
   box-sizing: border-box;
@@ -13,16 +13,17 @@
   color: white;
 }
 
-/* Header com logo e título */
 .navbar-header {
   display: flex;
   align-items: center;
   flex-direction: column;
   margin-bottom: 2rem;
+  border-bottom: 2px solid white;
+  padding-bottom: 3rem;
 }
 
 .navbar-logo-img {
-  width: 80px; /* tamanho da logo */
+  width: 80px;
   height: auto;
   margin-bottom: 10px;
 }
@@ -31,6 +32,8 @@
   font-size: 1.4rem;
   font-weight: 700;
   text-align: center;
+  margin: 0;
+  white-space: nowrap;
 }
 
 .navbar-vertical ul {
@@ -44,19 +47,20 @@
   margin-bottom: 1rem;
 }
 
-.navbar-logo {
-  margin: 0;
-  white-space: nowrap; /* impede quebra de linha */
-}
-
 .navbar-vertical ul li a {
   color: white;
   text-decoration: none;
   font-size: 1.1rem;
-  display: block;
+  display: flex;
+  align-items: center;
+  gap: 15px;
   padding: 10px 15px;
   border-radius: 6px;
   transition: background-color 0.2s ease;
+}
+
+.navbar-vertical ul li a i {
+  font-size: 1.3rem;
 }
 
 .navbar-vertical ul li a:hover,
@@ -64,8 +68,7 @@
   background-color: #509CDB;
 }
 
-/* Ajuste para o conteúdo principal */
 .main-content {
-  margin-left: 250px; /* igual à largura da navbar */
-  padding: 20px;
+  margin-left: 300px;
+  padding: 25px;
 }
